styles/main.css
:root {
  /** Dark theme primary colors */
  --color-primary-a0: #ec5023;
  --color-primary-a10: #f2673b;
  --color-primary-a20: #f87b53;
  --color-primary-a30: #fc8f6a;
  --color-primary-a40: #ffa282;
  --color-primary-a50: #ffb59a;

  /** Dark theme surface colors */
  --color-surface-a0: #070515;
  --color-surface-a10: #21202a;
  --color-surface-a20: #383741;
  --color-surface-a30: #515159;
  --color-surface-a40: #6c6b72;
  --color-surface-a50: #87878d;
}

@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");

body {
  font-family: "Space Grotesk", sans-serif;
  color: white;
  background-color: var(--color-surface-a0);
}

main {
  max-width: 1280px;
  padding: 0 20px;
  padding-top: 3rem;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: column;
}

h2 {
  font-size: 2rem;
  margin-bottom: 1.625rem;
}

/* Header */
header {
  width: 100%;
  height: 8.4375rem;
  padding: 2rem 0;
  background-color: var(--color-surface-a10);
}

header h1 {
  max-width: 1280px;
  padding: 0 20px;
  margin-left: auto;
  margin-right: auto;
}

h1,
img {
  height: 100%;
}

/* Category Filter */
ul {
  text-decoration: none;
  list-style-type: none;
  display: flex;
  width: 100%;
  margin-bottom: 2.5rem;
}
ul li {
  margin-bottom: 1.0625rem;
  font-size: 1.25rem;
  width: min-content;
  margin-right: 3.0625rem;
}
nav button {
  background: none;
  border: none;
  color: white;
  cursor: pointer;
}

/* Product Grid */
#products {
  margin-bottom: 1.25rem;
}

#products img {
  height: 150px;
  width: auto;
}

/* Product Article */
article {
  /* margin-right: 3.6875rem; */
  background-color: var(--color-surface-a10);
  padding: 25px;
  display: flex;
  flex-direction: row;
  /* width: 24.1875rem; */
  margin-bottom: 1rem;
}

.details {
  margin-left: 2.5rem;
}

/* Tablet Styles */
@media (min-width: 768px) {
  #products {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.25rem;
  }
  .product {
    margin-bottom: 0;
  }
}

/* Desktop Styles */
@media (min-width: 1536px) {
  #products {
    grid-template-columns: repeat(3, 1fr);
  }
}

